# ozon-desktop

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: __init__.py  api_routes.py  app_config.py  app_routes.py
app/core/constants/: __init__.py  api_routes.py  app_routes.py  user_roles.py
app/infrastructure/http/: client.py
app/infrastructure/http/middleware/: __init__.py  auth_middleware.py
app/infrastructure/router/: router.py
app/infrastructure/storage/: token_storage.py  user_storage.py
app/models/: __init__.py  base_response_model.py  doctor_model.py  patient_model.py  role_model.py  timestamp_model.py  user_model.py
app/models/mixins/: __init__.py  base_entity_mixin.py  paginated_response_mixin.py  password_mixin.py  timestamp_mixin.py
app/services/user/api/: doctor_api_service.py  user_api_service.py
app/services/user/auth/: auth_service.py
app/services/user/session/: user_session_service.py
app/styles/: base.qss  buttons.qss  inputs.qss  table.qss
app/ui/: __init__.py  login_view.py  main_window.py  patients_view.py  register_view.py  start_view.py
app/ui/components/: __init__.py
app/ui/components/buttons/: back_button.py
app/ui/components/forms/: form_container.py
app/ui/components/tables/: base_table.py  table_column.py
app/viewmodels/: __init__.py  base_viewmodel.py  login_viewmodel.py  register_viewmodel.py  start_viewmodel.py
